# Udacity-DSA

advanced-algorithms/route-planner/: README.md  helpers.py  project_notebook.ipynb  pyproject.toml  student_code.py
basic-algorithms/problems-vs-algorithms/: explanation_1.md  explanation_2.md  explanation_3.md  explanation_4.md  explanation_5.md  explanation_6.md  explanation_7.md  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.ipynb  problem_6.py  problem_7.py
data-structures/show-me-the-data-structures/: explanation_1.md  explanation_2.md  explanation_3.md  explanation_4.md  explanation_5.md  explanation_6.md  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py
introduction/unscramble-computer-science-problems/: Analysis.md  Task1.py  Task2.py  Task3.py  Task4.py
